fix: width on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,19 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-    max-width: 1400px;
-    width: 80%;
+  max-width: 1400px;
+  width: 80%;
 }
 
-button
-{
+button {
   user-select: none;
 }
 
-hr
-{
+hr {
   margin-top: 3rem;
 }
-.header
-{position: relative;
+.header {
+  position: relative;
   width: max-content;
   margin: auto;
 }
@@ -27,25 +25,21 @@ hr
   font-size: 5rem;
   font-weight: lighter;
   text-align: center;
-  
 }
 
-.hr{
-  position: relative
+.hr {
+  position: relative;
 }
-.hr a
-{
+.hr a {
   text-decoration: none;
   color: grey;
 }
 
-.github
-{
-  
+.github {
   border: 1px solid rgb(216, 216, 216);
   border-radius: 5px;
- bottom: 0.7rem;
- left: 0.6rem;
+  bottom: 0.7rem;
+  left: 0.6rem;
   position: absolute;
   width: max-content;
 }
@@ -60,7 +54,6 @@ hr
   position: absolute;
   top: 5.4rem;
   right: -2rem;
-  
 }
 
 .hide {
@@ -976,16 +969,14 @@ hr
   color: #ffffff;
 }
 
-@media screen and (max-width: 375px)
-{
-
-  body{
-    width: 95%;
-  }
-
+@media screen and (max-width: 375px) {
   .btn {
     font-size: 0.7rem;
     text-align: center;
   }
-
+}
+@media screen and (max-width: 450px) {
+  body {
+    width: 95%;
+  }
 }
